--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     volumes:
       - jenkins-data:/var/jenkins_home
       - jenkins-home:/home
+    restart: always
 
   nexus:
     image: sonatype/nexus3
@@ -28,6 +29,7 @@ services:
       - "8081:8081"
     expose:
       - "8081"
+    restart: always
 
   sonarqube:
     image: sonarqube
@@ -40,6 +42,7 @@ services:
       - sonarqube_conf:/opt/sonarqube/conf
       - sonarqube_data:/opt/sonarqube/data
       - sonarqube_extensions:/opt/sonarqube/extensions
+    restart: always
 
   db:
     image: postgres
@@ -50,6 +53,7 @@ services:
       - postgresql:/var/lib/postgresql
       # This needs explicit mapping due to https://github.com/docker-library/postgres/blob/4e48e3228a30763913ece952c611e5e9b95c8759/Dockerfile.template#L52
       - postgresql_data:/var/lib/postgresql/data
+    restart: always
 
 volumes:
   nexus-data: {}
@@ -60,4 +64,3 @@ volumes:
   sonarqube_extensions: {}
   postgresql: {}
   postgresql_data: {}
-
